[build-system]
build-backend = "setuptools.build_meta"
requires = [
    "setuptools >=72.1.0,<73",
]

[project]
dependencies = [
    "actionman ==0.1.1",
    "ansi-sgr ==0.1.0",
    "conventionalcommits ==0.1.0",
    "exceptionman ==0.1.0",
    "fileex ==0.2.0",
    "github-contexts ==0.1.1",
    "gittidy ==0.3.1",
    "htmp ==0.1.0",
    "jinja2 ==3.1.6",
    "jsonpath-ng ==1.7.0",
    "jsonschema ==4.23.0",
    "jsonschemata ==0.1.0",
    "licenseman ==0.1.0",
    "loggerman ==0.1.0",
    "mdit ==0.1.0",
    "packaging ==24.2",
    "pkgdata ==0.1.0",
    "pycolorit ==0.1.1",
    "pylinks ==0.1.0",
    "pyserials ==0.1.0",
    "pyshellman ==0.1.0",
    "pysyntax ==0.1.0",
    "referencing ==0.36.2",
    "ruamel.yaml ==0.18.10",
    "rich ==13.9.4",
    "trove-classifiers >=2025.3.13.13",
    "versionman ==0.1.1",
]
name = "ProMan"
requires-python = ">=3.10"
version = "0.1.0"

[project.scripts]
proman = "proman.__main__:cli"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
namespaces = true
where = ["src"]
