[build-system]
build-backend = "setuptools.build_meta"
requires = ["setuptools>=61.0", "versioningit"]

[project]
dependencies = ["pytest >= 7.4.2, < 8", "pytest-cov >= 4.1.0, < 5", "pipreqs"]
dynamic = ["version"]
name = "PyPackIT-TestSuite"

[tool]
[tool.setuptools]
include-package-data = true
zip-safe = false

[tool.setuptools.packages.find]
namespaces = true
where = ["src"]

[tool.versioningit]
[tool.versioningit.format]
dirty = "{base_version}.dirty"
distance = "{base_version}+{distance}-{revision}"
distance-dirty = "{base_version}+{distance}-{revision}.dirty"

[tool.versioningit.onbuild]
build-file = "pypackit_testsuite/__init__.py"
method = "replace-version"
regex = "^\\s*__version_details__\\s*=\\s*(?P<version>.*)"
replacement = "dict(\n    version=\"{version}\",\n    version_tuple={version_tuple},\n    author_date=\"{author_date:%Y.%m.%d}\",\n    build_date=\"{build_date:%Y.%m.%d}\",\n    branch=\"{branch}\",\n    distance=\"{distance}\",\n    head_commit_hash=\"{revision}\",\n)"
require-match = true
source-file = "tests/src/pypackit_testsuite/__init__.py"

[tool.versioningit.tag2version]
rmprefix = "ver/"

[tool.versioningit.vcs]
default-tag = "ver/0.0.0"
match = ["ver/[0-9]*.[0-9]*.[0-9]*"]
method = "git"
